# teplotna_komora

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  test.txt
admin/: .gitignore  CMakeLists.txt  charts.cpp  charts.hpp  console.cpp  control.cpp  control.hpp  main.cpp  main_window.hpp  test.md  to_json.cpp  transceiver.cpp  transceiver.hpp
admin/src/: CMakeLists.txt  app.cpp  chart_widget.cpp  chart_widget.hpp  charts.cpp  charts.hpp  cli.cpp  console.hpp  control.cpp  control.hpp  dialog.cpp  dialog.hpp  main.cpp  returns_true.hpp  serial_port_opener.cpp  serial_port_opener.hpp  tmp.hpp  to_json.cpp  to_json.hpp  transceiver.cpp  transceiver.hpp  util.hpp
admin/src/app/: CMakeLists.txt  CommandsHelper.cpp  CommandsHelper.hpp  ConsoleHandler.cpp  ConsoleHandler.hpp  SerialHandler.cpp  SerialHandler.hpp  app.cpp  app.hpp  main.cpp  returns_true.cpp  usage.txt
admin/src/app/test/: test.cpp
admin/src/decoder/: CMakeLists.txt  private.cpp  private.hpp  public.cpp
admin/src/decoder/test/: test.cpp
admin/src/submodule/: private.cpp  public.cpp
admin/src/submodule/inner_submodule/: inner_submodule.cpp
admin_mock/src/: CMakeLists.txt  chart_widget.cpp  chart_widget.hpp  cli.cpp  dialog.cpp  dialog.hpp  to_json.cpp  to_json.hpp  transceiver.cpp  transceiver.hpp
app/: CMakeLists.txt  app.cpp  button_it.cpp  main.c  main.c.bak  printf_redirect.c
app/actuators/: CMakeLists.txt
app/actuators/inc/: bridge.hpp  buzzer.hpp  fan.hpp
app/actuators/src/: bridge.cpp  buzzer.cpp  fan.cpp
app/communication/inc/: usb_uart.hpp
app/communication/src/: usb_uart.cpp
app/display/: CMakeLists.txt
app/tasks/inc/: temperature_control.hpp
common/max31865_regs/test/: CMakeLists.txt
common/sht31_regs/: CMakeLists.txt  status.cpp  temp_hum.cpp
core/: CMakeLists.txt
core/inc/: main.h  stm32f2xx_hal_conf.h
core/src/: stm32f2xx_hal_msp.c
fw/comm/comm_rs232_uart/: CMakeLists.txt  actions.cpp  channel.cpp  semaphore.cpp  transmitter.cpp
fw/core/: CMakeLists.txt  gpio.c  main.c  spi.c  tim.c  usart.c
fw/core/include/: main.h  stm32f2xx_hal_conf.h  stm32f2xx_it.h
src/: CMakeLists.txt  app.cpp  app.hpp  main.c  main.c.bak  printf_redirect.c  sysmem.c
src/actu/: CMakeLists.txt
src/actu/bridge/: bridge.cpp
src/actu/buzzer/: buzzer.cpp
src/actu/fan/: CMakeLists.txt  fan.cpp
src/actu/lin_source/: CMakeLists.txt  lin_source.cpp
src/actu/peltier/: CMakeLists.txt  current_source.cpp  current_source.hpp  hbridge.cpp  hbridge.hpp  peltier.cpp
src/actu/pump/: pump.cpp
src/app/: CMakeLists.txt  app.cpp  app_main.cpp  producer_consumer_test.cpp  producer_consumer_test.hpp  util.cpp  util.hpp
src/bksram/: CMakeLists.txt  bksram.cpp  magic.cpp
src/callback_overrides/: CMakeLists.txt  callback_overrides.cpp
src/clk/: CMakeLists.txt  clk.cpp
src/comm/: CMakeLists.txt
src/comm/io_putchar_override/: CMakeLists.txt  io_putchar_override.cpp
src/comm/rs232_uart/: CMakeLists.txt  rs232_uart.cpp
src/comm/usb_uart/: CMakeLists.txt  usb_uart.cpp
src/core/: CMakeLists.txt  FreeRTOSConfig.h  dac.c  freertos.c  gpio.c  iwdg.c  main.c  main.c.bak  main.h  rtc.c  spi.c  startup_stm32h503rbtx.s  stm32f2xx_hal_msp.c  stm32f2xx_hal_timebase_tim.c  stm32f2xx_it.c  stm32h5xx_hal_msp.c  stm32h5xx_it.c  stm32h7xx_hal_conf.h  stm32h7xx_hal_msp.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c  stm32h7xx_it.h  tim.c  usart.c
src/core/auto_generated/: gpio.c  main.c  spi.c  stm32f2xx_hal_timebase_tim.c  stm32f2xx_it.c  tim.c  usart.c
src/core/include/: FreeRTOSConfig.h  main.h  rtc.h  stm32f2xx_hal_conf.h  stm32f2xx_it.h  stm32h5xx_hal_conf.h  stm32h5xx_it.h  stm32h5xx_nucleo_conf.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  stm32h7xx_nucleo_conf.h  tim.h
src/core/util/: printf_redirect.c
src/dht/: dht.cpp
src/ds3231/: CMakeLists.txt  ds3231.cpp  test.cpp
src/example_subdirectory/: CMakeLists.txt  private.hpp  public.cpp
src/example_subdirectory/test/: CMakeLists.txt  test.cpp
src/example_submodule/: CMakeLists.txt  private.cpp  private.hpp  public.cpp
src/example_submodule/test/: CMakeLists.txt  placeholder  test.cpp
src/fan/: bulk.cpp
src/fanctl/: CMakeLists.txt  bulk.cpp
src/gpio_exti_callback_override/: CMakeLists.txt  gpio_exti_callback_override.cpp
src/i2c2/: CMakeLists.txt  common.cpp  hw.cpp  sw.cpp  test.cpp
src/i2c2/stm32_bitbang_i2c/: dwt_stm32_delay.h  stm32_sw_i2c.cpp  stm32_sw_i2c.h
src/i2cbb/: common.cpp  i2cbb.cpp
src/mfrc522/: MFRC522.cpp
src/panel/: CMakeLists.txt
src/panel/button/: CMakeLists.txt  button.cpp
src/panel/encoder/: CMakeLists.txt  encoder.cpp
src/panel/led/: led.cpp
src/panel/sevseg/: CMakeLists.txt
src/peripheral/: CMakeLists.txt
src/peripheral/done/: CMakeLists.txt
src/peripheral/tim_sevw/: tim_sevw.cpp
src/rtc/: rtc.cpp
src/sens/: CMakeLists.txt
src/sens/dht/: CMakeLists.txt  dht.cpp
src/sens/i2c/: CMakeLists.txt
src/sens/max31865/: CMakeLists.txt
src/sens/max31865_driver/: extension.cpp  test.cpp
src/sens/sht31/: CMakeLists.txt
src/sens/spi_display/: CMakeLists.txt  spi_display.cpp  spi_display.hpp
src/sens/spi_temp/: CMakeLists.txt  MAX31865.cpp  spi_temp.cpp
src/sens/spi_temperature/: CMakeLists.txt  spi_temperature.cpp  spi_temperature.hpp
src/submodule/: CMakeLists.txt  private.hpp
src/submodule/inner_submodule/: CMakeLists.txt  bar.cpp  bar.hpp
src/tasks/: CMakeLists.txt  dht_test.cpp  rs232_uart.cpp  temp_ctl.cpp
src/tasks/tasks_common/: CMakeLists.txt  prototype.cpp
src/tasks/tasks_example/: CMakeLists.txt  example.cpp
src/tasks/tasks_fan_senser/: CMakeLists.txt  fan_senser.cpp
src/tasks/tasks_panel/: CMakeLists.txt  panel.cpp
src/tasks/tasks_rs232_uart/: CMakeLists.txt  rs232_uart.cpp
src/tasks/tasks_senser_killer/: CMakeLists.txt  senser_killer.cpp
src/tasks/tasks_sevseg_white/: CMakeLists.txt  sevseg_white.cpp
src/tasks/tasks_temp_ctl/: CMakeLists.txt  temp_ctl.cpp
src/tasks/tasks_temp_senser/: CMakeLists.txt  temp_senser.cpp
src/util/: CMakeLists.txt  override_io_putchar.cpp  printf_redirect.cpp  redirect_stdout.cpp  rtc.cpp  util.cpp
(+440 files in other folders)
