get_filename_component(SUBMODULE_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
file(GLOB_RECURSE SUBMODULE_SOURCE_FILES "src/*.c")
add_library(${SUBMODULE_NAME} ${SUBMODULE_SOURCE_FILES})
target_link_libraries(${SUBMODULE_NAME} PRIVATE stm32cubef2)
target_include_directories(${SUBMODULE_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/inc)