get_filename_component(SUBMODULE_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
file(GLOB_RECURSE SUBMODULE_SOURCE_FILES "*.cpp")
add_library(${SUBMODULE_NAME} OBJECT ${SUBMODULE_SOURCE_FILES})
target_link_libraries(${SUBMODULE_NAME} PRIVATE stm32cubeh7 trielo example_submodule)
target_link_libraries(${SUBMODULE_NAME} PUBLIC dht)