get_filename_component(SUBMODULE_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
file(GLOB SUBMODULE_SOURCE_FILES "*.cpp")

set(SUBMODULE_TEST_VAR "${SUBMODULE_NAME}_TEST")
if(DEFINED ${SUBMODULE_TEST_VAR} AND ${${SUBMODULE_TEST_VAR}} STREQUAL TRUE)
    ExternalProject_Add(${SUBMODULE_NAME}_test
        SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/test
        CMAKE_GENERATOR Ninja
        CMAKE_CACHE_ARGS
            -DSUBMODULE_NAME:STRING=${SUBMODULE_NAME}
            -DSUBMODULE_SOURCE_FILES:STRING=${SUBMODULE_SOURCE_FILES}
            -DSUBMODULE_SUBDIRECTORY_DEPS:STRING=${CMAKE_SOURCE_DIR}/deps/trielo
        INSTALL_COMMAND ""
        CONFIGURE_HANDLED_BY_BUILD FALSE
        TEST_COMMAND ${CMAKE_CTEST_COMMAND} --output-on-failure
        TEST_BEFORE_INSTALL TRUE
    )
endif()

add_library(${SUBMODULE_NAME} ${SUBMODULE_SOURCE_FILES})
target_include_directories(${SUBMODULE_NAME} PUBLIC "include")
target_link_libraries(${SUBMODULE_NAME} PRIVATE stm32cubef2 trielo)