add_subdirectory(button)
add_library(panel::button ALIAS button)
add_subdirectory(encoder)
add_library(panel::encoder ALIAS encoder)
add_subdirectory(led)
add_library(panel::led ALIAS led)
add_subdirectory(sevseg)
add_library(panel::sevseg_common ALIAS sevseg_common)
add_library(panel::sevseg_green_yellow ALIAS sevseg_green_yellow)
add_library(panel::sevseg_white ALIAS sevseg_white)