add_subdirectory(dac)
add_library(peripheral::dac ALIAS dac)
add_subdirectory(gpio)
add_library(peripheral::gpio ALIAS gpio)
add_subdirectory(it)
add_library(peripheral::it ALIAS it)
add_subdirectory(spi1_temp)
add_library(peripheral::spi1_temp ALIAS spi1_temp)
add_subdirectory(spi2_sevyg)
add_library(peripheral::spi2_sevyg ALIAS spi2_sevyg)
add_subdirectory(tim_fan)
add_library(peripheral::tim_fan ALIAS tim_fan)
add_subdirectory(tim_sevw)
add_library(peripheral::tim_sevw ALIAS tim_sevw)
add_subdirectory(uart1_usb)
add_library(peripheral::uart1_usb ALIAS uart1_usb)
add_subdirectory(uart3_rs232)
add_library(peripheral::uart3_rs232 ALIAS uart3_rs232)