add_subdirectory(i2c)
add_library(sens::i2c_common ALIAS common)
add_library(sens::i2c_light ALIAS light)
add_library(sens::i2c_temp_hum ALIAS temp_hum)
add_subdirectory(spi_temperature)
add_library(sens::spi_temperature ALIAS spi_temperature)
add_subdirectory(spi_display)
add_library(sens::spi_display ALIAS spi_display)